04-11-2009 Michael Klapper  <michael.klapper@aoemedia.de>
	* Add hook on TCEMAIN to set the right value for "inc_access_lists" on type change.

03-11-2009 Michael Klapper  <michael.klapper@aoemedia.de>
	* Initial release