@@ -29,7 +29,7 @@ $EM_CONF[$_EXTKEY] = array(
 	'clearCacheOnLoad' => 1,
 	'lockType' => '',
 	'author_company' => 'AOE media GmbH',
-	'version' => '0.1.0',
+	'version' => '0.3.0',
 	'constraints' => array(
 		'depends' => array(
 			'cms' => '',
