@@ -42,16 +42,16 @@ class tx_begroups_service_tcemain_hook {
 	 * @var array
 	 */
 	private $setIncludeListFlag = array (
-			0 => null,
-			1 => true,
-			2 => true,
-			3 => false,
-			4 => false,
-			5 => false,
-			6 => false,
-			7 => false,
-			8 => false,
-		);
+		0 => null,
+		1 => true,
+		2 => true,
+		3 => false,
+		4 => false,
+		5 => false,
+		6 => false,
+		7 => false,
+		8 => false,
+	);
 
 	/**
 	 * Update inc_access_lists value if the table is "be_groups"
@@ -63,6 +63,19 @@ class tx_begroups_service_tcemain_hook {
 	 */
 	public function processDatamap_preProcessFieldArray(&$incomingFieldArray, $table, $id, $parentObj) {
 		if ($table == 'be_groups') {
+
+				// reset all fields except the relevant for the current selected view
+			if (! is_null($this->setIncludeListFlag[$incomingFieldArray['tx_begroups_kind']]) ) {
+				$fieldsToKeepArray = array_keys(t3lib_beFunc::getTCAtypes('be_groups', $incomingFieldArray, 1));
+
+				foreach ($incomingFieldArray as $column => $value) {
+					if (! in_array($column, $fieldsToKeepArray) ) {
+						$incomingFieldArray[$column] = null;
+					}
+				}
+			}
+			
+				// update include access list flag
 			if ($this->setIncludeListFlag[$incomingFieldArray['tx_begroups_kind']] === true) {
 				$incomingFieldArray['inc_access_lists'] = 1;
 			} elseif ($this->setIncludeListFlag[$incomingFieldArray['tx_begroups_kind']] === false) {
